--- a/Bi183_PS1/BI183_PS1.ipynb
+++ b/Bi183_PS1/BI183_PS1.ipynb
@@ -6,7 +6,8 @@
     "collapsed": true
    },
    "source": [
-    "This is a test to see if I can push and pull the notebook into my git repository for the class. \n"
+    "This is a test to see if I can push and pull the notebook into my git repository for the class. \n",
+    "Test number 2. I think I have it working now. "
    ]
   }
  ],
