3rd test to see if I have version control working

--- a/Bi183_PS1/BI183_PS1.ipynb
+++ b/Bi183_PS1/BI183_PS1.ipynb
@@ -7,7 +7,11 @@
    },
    "source": [
     "This is a test to see if I can push and pull the notebook into my git repository for the class. \n",
-    "Test number 2. I think I have it working now. "
+    "\n",
+    "\n",
+    "Test number 2. I think I have it working now. \n",
+    "\n",
+    "Test number 3. Final test. "
    ]
   }
  ],
